SERVER-94317: Fix bug in variant types logging (#28228)

GitOrigin-RevId: e6d3983a0f699c22c9e4e3a9bd79e6e53102aed9